--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,6 +10,7 @@
     </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.PublicProfileActivity">
@@ -74,6 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:rating="3"
+        android:progressBackgroundTint="@android:color/darker_gray"
         app:layout_constraintTop_toBottomOf="@+id/location"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +98,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rating_bar"
         android:background="@drawable/profile_background"
         app:cardCornerRadius="5dp"
+        app:cardBackgroundColor="@color/white"
         app:cardElevation="@dimen/cardview_compat_inset_shadow"
         app:layout_constraintBottom_toTopOf="@+id/scrollView"
         android:layout_marginStart="20dp"
@@ -214,6 +217,7 @@
                     android:id="@+id/phone"
                     android:layout_gravity="center_vertical"
                     android:textSize="20sp"
+                    android:textColor="@android:color/black"
                     android:layout_marginStart="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -247,6 +251,7 @@
                         android:layout_gravity="center_vertical"
                         android:textSize="20sp"
                         android:layout_marginStart="20dp"
+                        android:textColor="@android:color/black"
                         android:fontFamily="serif-monospace"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -278,6 +283,7 @@
                         android:id="@+id/message"
                         android:layout_gravity="center_vertical"
                         android:textSize="20sp"
+                        android:textColor="@android:color/black"
                         android:layout_marginStart="20dp"
                         android:fontFamily="serif-monospace"
                         android:layout_width="wrap_content"
