--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 <ScrollView
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/white"
     tools:context=".ui.activity.SignUpActivity">
 
 <LinearLayout
@@ -90,6 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="41dp"
             android:paddingStart="6dp"
+            android:textColor="@android:color/black"
             android:background="@android:color/white"
             android:paddingEnd="6dp"
             android:text="الأسم"
@@ -121,10 +121,11 @@
 
             <Spinner
                 android:id="@+id/jobs_spinner"
+                android:backgroundTint="@android:color/darker_gray"
+                android:popupBackground="@android:color/white"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textSize="18sp"
-                android:textColor="@color/primaryDarkColor"
                 android:layout_width="match_parent"
                 android:layout_height="55dp" />
 
@@ -139,6 +140,7 @@
             android:paddingStart="6dp"
             android:background="@android:color/white"
             android:paddingEnd="6dp"
+            android:textColor="@android:color/black"
             android:text="المهنة"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -190,6 +192,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="41dp"
             android:paddingStart="6dp"
+            android:textColor="@android:color/black"
             android:background="@android:color/white"
             android:paddingEnd="6dp"
             android:text="رقم التليفون"
@@ -242,6 +245,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="41dp"
             android:paddingStart="6dp"
+            android:textColor="@android:color/black"
             android:background="@android:color/white"
             android:paddingEnd="6dp"
             android:text="رقم الواتساب"
@@ -269,7 +273,8 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textSize="18sp"
-                android:textColor="@color/primaryDarkColor"
+                android:backgroundTint="@android:color/darker_gray"
+                android:popupBackground="@android:color/white"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                  android:prompt="@string/app_name" />
@@ -283,6 +288,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="41dp"
             android:paddingStart="6dp"
+            android:textColor="@android:color/black"
             android:background="@android:color/white"
             android:paddingEnd="6dp"
             android:text="المحافظة"
@@ -312,7 +318,8 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textSize="18sp"
-                android:textColor="@color/primaryDarkColor"
+                android:backgroundTint="@android:color/darker_gray"
+                android:popupBackground="@android:color/white"
                 android:layout_width="match_parent"
                 android:layout_height="55dp" />
 
@@ -326,6 +333,7 @@
             android:layout_marginStart="41dp"
             android:paddingStart="6dp"
             android:background="@android:color/white"
+            android:textColor="@android:color/black"
             android:paddingEnd="6dp"
             android:text="المنطقة"
             />
