--- a/app/src/main/res/layout/chat_item_me.xml
+++ b/app/src/main/res/layout/chat_item_me.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <data>
     <variable
         name="chat"
         type="com.example.betak.model.entity.Chat" />
 </data>
+
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/date"
+            android:visibility="visible"
+            android:text="30:00"
+            android:textColor="@android:color/darker_gray"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/colorClick"
+            android:padding="5dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
@@ -20,19 +37,52 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp">
 
-            <TextView
-                android:id="@+id/message_me"
-                android:padding="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
-                android:text="Shaimaa say hello"
-                app:setMessage="@{chat.message}" />
+           <LinearLayout
+               android:orientation="vertical"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content">
+
+               <TextView
+                   android:id="@+id/message_me"
+                   android:padding="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textColor="@android:color/white"
+                   android:textSize="18sp"
+                   android:text="Shaimaa sa000000"
+                   app:setMessage="@{chat.message}" />
+
+               <LinearLayout
+                   android:orientation="horizontal"
+                   android:layout_gravity="end"
+                   android:layout_marginEnd="5dp"
+                   android:layout_marginTop="3dp"
+                   android:layout_marginBottom="8dp"
+                   android:layout_marginStart="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content">
+                   <TextView
+                       android:id="@+id/time"
+                       android:text="30:00"
+                       android:layout_marginEnd="2dp"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content" />
+                   <ImageView
+                       android:id="@+id/seen"
+                       android:layout_gravity="bottom"
+                       android:src="@drawable/ic_baseline_done_all_24"
+                       android:layout_width="20dp"
+                       android:layout_marginStart="5dp"
+                       android:visibility="gone"
+                       android:layout_height="20dp"/>
+               </LinearLayout>
+
+           </LinearLayout>
+
 
         </androidx.cardview.widget.CardView>
-    </LinearLayout>
 
+    </LinearLayout>
 
 </layout>
 
