--- a/app/src/main/res/layout/chat_item_other.xml
+++ b/app/src/main/res/layout/chat_item_other.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/tools">
     <data>
      <variable
          name="chat"
          type="com.example.betak.model.entity.Chat" />
     </data>
 
-    <LinearLayout
+    <RelativeLayout
+        android:gravity="end"
         android:layout_width="wrap_content"
-        android:orientation="horizontal"
         android:layout_height="wrap_content">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:civ_border_color="@color/primaryDarkColor"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            app:civ_border_width="1dp"
-            android:src="@drawable/profile"/>
+        <TextView
+            android:id="@+id/date"
+            android:text="30:00"
+            android:textColor="@android:color/darker_gray"
+            android:visibility="gone"
+            android:layout_centerInParent="true"
+            android:background="@color/colorClick"
+            android:padding="5dp"
+            android:layout_above="@id/card_receiver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/card_receiver"
+                android:layout_toStartOf="@id/img_receiver"
                 android:layout_width="wrap_content"
                 app:cardCornerRadius="16dp"
                 android:layout_marginStart="10dp"
@@ -34,17 +37,49 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp">
 
-                <TextView
-                    android:id="@+id/message_other"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp"
-                    android:text="Shaimaa say hello"
-                    app:setMessage="@{chat.message}" />
+       <LinearLayout
+           android:orientation="vertical"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content">
+           <TextView
+               android:id="@+id/message_other"
+               android:padding="5dp"
+               android:layout_gravity="end"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:textColor="@android:color/white"
+               android:textSize="18sp"
+               android:text="Shaimaa say hello"
+               app:setMessage="@{chat.message}" />
+
+           <TextView
+               android:id="@+id/time"
+               android:layout_marginStart="5dp"
+               android:layout_marginBottom="5dp"
+               android:text="30:00"
+               android:layout_marginEnd="70dp"
+               android:layout_marginTop="3dp"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content" />
+       </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-    </LinearLayout>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_receiver"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                bind:imageUrl="@{chat.receiverImage}"
+                app:civ_border_color="@color/primaryDarkColor"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                app:civ_border_width="1dp"
+                android:src="@drawable/profile"/>
+
+
+    </RelativeLayout>
 
 </layout>
