--- a/app/src/main/res/layout/employee_item.xml
+++ b/app/src/main/res/layout/employee_item.xml
@@ -11,6 +11,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_margin="5dp"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 <RelativeLayout
@@ -21,6 +22,7 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/emp_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -65,6 +67,7 @@
             <TextView
                 app:setName="@{employee.name}"
                 android:id="@+id/name"
+                android:textColor="@android:color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autoText="false"
@@ -92,6 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autoText="false"
+                android:textColor="@android:color/black"
                 android:text="name"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
@@ -114,6 +118,7 @@
                 android:id="@+id/phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
                 android:autoText="false"
                 android:text="name"
                 android:layout_marginStart="5dp"
@@ -122,6 +127,11 @@
         </LinearLayout>
     </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_below="@id/emp_item"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
