--- a/app/src/main/res/layout/rate_list_item.xml
+++ b/app/src/main/res/layout/rate_list_item.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     android:layout_marginBottom="10dp"
     android:layout_marginTop="10dp"
-    android:background="@color/primaryLightColor"
+    android:background="@color/colorClick"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -14,7 +14,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_margin="6dp"
-        app:civ_border_color="@android:color/black"
+        app:civ_border_color="@android:color/darker_gray"
         app:civ_border_width="1dp"
         android:src="@drawable/profile"/>
     <LinearLayout
@@ -42,9 +42,9 @@
             android:layout_width="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_height="wrap_content"
-            android:text="Good"
+            android:text="جيددد"
             android:textSize="17sp"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/darker_gray"/>
     </LinearLayout>
 
 </RelativeLayout>
